Remove RegexpsFromFile feature + simplify with List of String